--- a/client/src/AppStyle.css
+++ b/client/src/AppStyle.css
@@ -12,16 +12,43 @@
 	display: flex;
 	align-items: center;
 	margin: 0;
+	position: fixed;
+	top: 0;
+	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 #banner h1 {
-	margin:0 0 0 40px;
 	font-size: 1.75em;
+	width: 20%;
+	margin: 0;
+}
+
+.navBar {
+	width: 80%;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.navBar a {
+	color: #333;
+	font-size: 1.5em;
+	font-weight: 700;
+}
+
+.navBar a:hover {
+	color: black;
+}
+
+.activeLink {
+	color: white !important;
+	text-decoration: none !important;
 }
 
 #content {
+	margin: 4% 0 0 0;
 	width:100%;
-	height: 94%;
+	height: 96%;
 }
 
 .page {
