--- a/client/src/PageComponents/SearchListingsStyle.css
+++ b/client/src/PageComponents/SearchListingsStyle.css
@@ -4,6 +4,7 @@
 	border-radius: 5px;
 	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 	padding: 10px;
+	height: calc(10% - 20px);
 	display: flex;
 	align-items: center;
 }
@@ -58,4 +59,6 @@
 
 #listings {
 	margin-top: 8px;
+	height: calc(90% - 8px);
+	overflow: hidden;
 }
