--- a/client/src/PageComponents/PageStyling.css
+++ b/client/src/PageComponents/PageStyling.css
@@ -1,9 +1,10 @@
-#searchPage {
+/* General Styling */
+#searchPage, #deckPage {
 	display: flex;
-	margin-top: 30px;
+	margin-top: 10px;
 }
 
-#sideBar {
+.sideBar {
 	width: calc(15% - 40px);
 	margin: 0 20px 0 20px;
 	background-color: #5E5F68;
@@ -12,7 +13,7 @@
 	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
-#mainContent {
+.mainContent {
 	width: 85%;
 	margin-left: 15%;
 	margin-right: 30px;
@@ -25,4 +26,3 @@ button, input, label {
 a:hover {
 	text-decoration: none;
 }
-
