--- a/client/src/PageComponents/SearchFilterStyle.css
+++ b/client/src/PageComponents/SearchFilterStyle.css
@@ -1,17 +1,17 @@
-#searchFilters {
+.searchFilters {
 	width: 100%;
 	padding: 20px 20px 0px 20px;
 	border-radius: 10px;
 }
 
-#searchContainer {
+.searchContainer {
 	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 }
 
-#searchContainer input {
+.searchContainer input {
 	width: 75%;
 	text-indent: .5em;
 	background-color: rgb(220,220,220);
@@ -22,7 +22,7 @@
 	color: black;
 }
 
-#searchContainer button {
+.searchContainer button {
 	padding: 4px;
 	width: 20%;
 	background-color: white;
@@ -66,7 +66,7 @@
 	color: white;
 }
 
-#searchFilters button:hover {
+.searchFilters button:hover {
 	box-shadow: inset 0 0 0 10000px rgba(0,0,0,0.20);
 }
 
