--- a/client/src/PageComponents/SortContainerStyle.css
+++ b/client/src/PageComponents/SortContainerStyle.css
@@ -1,29 +1,46 @@
-.sortContainer {
+/* Listings Container (base class) */
+
+.listingOptions {
 	width: calc(100% - 20px);
+	height: calc(10% - 20px;);
+	display: flex;
+	flex-grow: 1;
+}
+
+.optionsContainer {
+	flex-grow: 1;
 	background-color: #5E5F68;
 	border-radius: 5px;
 	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 	padding: 10px;
-	height: calc(10% - 20px);
 	display: flex;
 	align-items: center;
-	justify-content: space-around;
+	justify-content: space-around;	
 }
 
-.sortContainer span input {
+.sortOptions {
+	min-width: 75%;
+}
+
+.sortOptions span input {
 	display: none;
 }
 
-.sortContainer span label {
+.sortOptions span label {
 	font-size: 1.5em;
 }
 
-.sortContainer span label:hover {
+.sortOptions span label:hover {
 	color: black;
 }
 
-.sortContainer span input:checked + label {
+.sortOptions span input:checked + label {
 	color: white;
+}
+
+.sortOptions span label i {
+	font-size: .75em;
+	margin-left: .5em;
 }
 
 .items {
@@ -31,4 +48,25 @@
 	height: calc(90% - 8px);
 	display: flex;
 	flex-direction: column;
+}
+
+/* Card Listings Container */
+.displayOptions {
+	margin-left: 20px;
+}
+
+.displayOptions input {
+	display: none;
+}
+
+.displayOptions input:checked + label {
+	color: white;
+}
+
+.displayOptions label {
+	font-size: 2em;
+}
+
+.displayOptions label:hover {
+	color: black;
 }
