--- a/client/src/PageComponents/DeckListingStyle.css
+++ b/client/src/PageComponents/DeckListingStyle.css
@@ -7,7 +7,7 @@
 	align-items: center;
 	padding: 10px;
 	background-color: white;
-	width: calc(100% - 20px);
+	width: calc(100%);
 	border-radius: 5px;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
@@ -30,4 +30,26 @@
 
 .deckHouses {
 	width: 40%;
+}
+
+.deckDetails {
+	margin-top: 10px;
+}
+
+.card {
+	background-color: rgb(40,40,40);
+	display: flex;
+	justify-content: space-between;
+	padding: 4px 10px 4px 10px;
+	margin: 2px;
+	max-width: 90%;
+	margin-left: 5%;
+	border-radius: 5px;
+}
+
+.card p {
+	margin: 0;
+	color: rgb(240,240,240);
+	width: 25%;
+	text-align: left;
 }
