--- a/client/src/PageComponents/DeckListingStyle.css
+++ b/client/src/PageComponents/DeckListingStyle.css
@@ -17,7 +17,7 @@
 }
 
 .deckOverview h1 {
-	font-size: 1.5em;
+	font-size: 1.25em;
 	margin: 0;
 	color: rgb(80,80,80);
 	text-align: left;
@@ -33,23 +33,34 @@
 }
 
 .deckDetails {
+	margin-left: 2%;
 	margin-top: 10px;
+	display: grid;
+	grid-template-columns: 25% 25% 25% 25%;
 }
 
 .card {
-	background-color: rgb(40,40,40);
 	display: flex;
-	justify-content: space-between;
-	padding: 4px 10px 4px 10px;
-	margin: 2px;
-	max-width: 90%;
-	margin-left: 5%;
-	border-radius: 5px;
+	margin: 4px;
 }
 
 .card p {
 	margin: 0;
+	border-radius: 5px;
+	padding: 4px 10px 4px 10px;
+}
+
+.cardName {
+	background-color: rgb(50,50,50);
 	color: rgb(240,240,240);
-	width: 25%;
 	text-align: left;
+	flex-grow: 1;
+}
+
+.cardQuantity {
+	margin-left: 5px !important;
+	color: white;
+	background-color: #284DB5;
+	text-align: center;
+	border-radius: 5px;
 }
