--- a/client/src/PageComponents/SortContainerStyle.css
+++ b/client/src/PageComponents/SortContainerStyle.css
@@ -1,10 +1,10 @@
 /* Listings Container (base class) */
 
 .listingOptions {
-	width: calc(100% - 20px);
 	height: calc(10% - 20px;);
 	display: flex;
 	flex-grow: 1;
+	margin-bottom: 20px;
 }
 
 .optionsContainer {
@@ -41,6 +41,20 @@
 .sortOptions span label i {
 	font-size: .75em;
 	margin-left: .5em;
+}
+
+.resultsCount {
+	width: 100%;
+	background-color: #5E5F68;
+	padding: 10px;
+	border-radius: 10px;
+}
+
+.resultsCount p {
+	margin: 0;
+	font-size: 1.35em;
+	color: rgb(220,220,220);
+	text-align: left;
 }
 
 .items {
